# visavis-seir

./: .gitignore  .gitmodules  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  README.txt  binary-Lscan.py  binary.py  make_protocol.py  parameters.json  requirements.txt  run_simulation.py  simple.protocol  template.protocol
data/fig3/fig3A/: fig3A_w-6-l-300-interval-120--activity.csv  (+2 more)
figures/: plot_all.py
input/: one_initial_front.proto  two_initial_fronts.proto
notebooks/: binary mi.ipynb  interval.ipynb  lambda.ipynb  movies.ipynb  track.ipynb  track.py  width.py  zebry.ipynb
scripts/: add_figures_to_git.cmd  analyze_binary.py  analyze_periodic.py  analyze_tracking.py  analyze_velocity.py  binary.py  client.py  compile_for_all_heights.sh  compile_for_all_lengths.sh  compile_for_all_widths.sh  compile_qeirq.sh  compile_visavis.sh  defaults.py  entropy_utils.py  export_figures.cmd  export_figures.sh  formula.py  handler_tuple_vertical.py  lambda.py  make_protocol.py  make_video.py  optimizer.py  parameter_scan.py  plot_result.py  propensities.py  semi_analytical.py  significant_splits.py  simulation.py  simulation_result.py  style.py  template.protocol  track.py  tracked_results.py  tracker.py  tracking.py  two_fronts.py  utils.py  width.py
src/: cell.rs  commands.rs  compartment.rs  config.rs  event.rs  lattice.rs  legal_states.rs  main.rs  molecule.rs  output.rs  parameters.rs  protocol.rs  randomness.rs  rates.rs  simulation.rs  states.rs  subcompartments.rs  units.rs
utils/: add_figures_to_git.cmd  convert_to_tiff.sh  export_figures.cmd  export_figures.sh
(+610 files in other folders)
